# solana-task

./: .gitignore  README.md
task_1/: Anchor.toml
task_1/programs/task_1/: Cargo.toml
task_1/programs/task_1/src/: lib.rs
task_1/tests/: task_1.ts
task_2/: Anchor.toml
task_2/programs/task_2/: Cargo.toml
task_2/programs/task_2/src/: lib.rs
task_2/programs/task_2/src/instructions/: mod.rs  spl.rs  stack.rs
task_2/tests/: task_2.ts
